Fixing ocean background for mobile and z-index issues

--- a/packages/nouns-webapp/src/components/DiatomInfo/Lungs.module.css
+++ b/packages/nouns-webapp/src/components/DiatomInfo/Lungs.module.css
@@ -33,7 +33,7 @@
   font-weight: bold;
 
   padding-right: 2rem;
-  z-index: 10;
+  z-index: 50;
 }
 
 .LungsContent p::after {
